# btclient

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
scripts/: run-wsl.sh  tauri-dev-wsl.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  runtime.rs
src-tauri/src/commands/: mod.rs  task_commands.rs
src-tauri/src/domain/: errors.rs  task.rs
src-tauri/src/engine/: memory_engine.rs  mod.rs  models.rs  rqbit_adapter.rs
src-tauri/src/persistence/: mod.rs  paths.rs  task_repository.rs
src-tauri/src/scheduler/: mod.rs  single_active_scheduler.rs
src-tauri/src/service/: task_service.rs
src-tauri/tests/: commands_test.rs  domain_task_test.rs  engine_memory_test.rs  persistence_test.rs  rqbit_adapter_test.rs  runtime_test.rs  scheduler_test.rs  smoke_test.rs  task_service_test.rs
src/lib/: main-entry.node.test.mjs  wsl-scripts.node.test.mjs
src/lib/api/: commands.ts  events.ts  types.ts
src/lib/components/: AppShell.svelte  ErrorToast.svelte  SettingsDialog.svelte  TaskDetail.svelte  TaskTable.svelte  Toolbar.svelte  components.node.test.mjs
src/lib/stores/: format.mjs  format.node.test.mjs  format.test.ts  format.ts  settings.ts  tasks.mjs  tasks.node.test.mjs  tasks.test.ts  tasks.ts
