[package]
name = "btclient"
version = "0.1.0"
edition = "2021"

[lib]
name = "btclient"
path = "src/lib.rs"

[[bin]]
name = "btclient"
path = "src/main.rs"

[features]
default = []
bt = ["dep:librqbit", "dep:tokio"]
desktop = ["dep:tauri", "bt"]

[dependencies]
librqbit = { version = "8.1.1", optional = true }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.3", optional = true, features = [] }
tokio = { version = "1", features = ["full"], optional = true }

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
